# openrouter-free-model-scouter

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
results/: history.xlsx  scouter.db
skills/openrouter-free-model-watchdog/: SKILL.md
skills/openrouter-free-model-watchdog/references/: cron_recipes.md  example_report.md  report_metrics.md
skills/openrouter-free-model-watchdog/scripts/: generate_summary_no_agent.sh  run_scan_and_report.sh  run_scan_report_no_agent.sh
skills/openrouter-free-model-watchdog/scripts/lib/: scout_common.sh
src/openrouter_free_model_scouter/: availability_report.py  cli.py  config.py  database.py  domain_models.py  excel_timeline_repository.py  healthcheck_service.py  http_client.py  main.py  model_catalog_service.py  models.py  openrouter_client.py  schemas.py  sqlite_repository.py
src/openrouter_free_model_scouter/api/: endpoints.py
src/openrouter_free_model_scouter/reporting/: __init__.py  analysis.py  cli.py  constants.py  models.py  renderer.py  service.py  timeline.py  utils.py
src/openrouter_free_model_scouter/services/: stats_service.py
src/openrouter_free_model_scouter/static/: app.js  index.html  style.css
src/openrouter_free_model_scouter/web/: server.py
src/openrouter_free_model_scouter/web/templates/: index.html
src/openrouter_free_model_scouter/worker/: scouter.py
tests/: conftest.py  reporting_fixtures.py  test_api.py  test_cli_env_merge.py  test_config_loader.py  test_excel_bootstrap_from_csv.py  test_excel_timeline_repository.py  test_model_catalog_service.py  test_reporting_analysis.py  test_reporting_cli.py  test_reporting_renderer.py  test_reporting_service.py  test_reporting_timeline.py  test_reporting_utils.py  test_services.py  test_worker.py
