[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-free-model-scouter"
version = "0.1.0"
description = "Scout OpenRouter free models and record healthcheck results"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
openrouter-free-model-scouter = "openrouter_free_model_scouter.cli:main"
openrouter-free-model-scouter-web = "openrouter_free_model_scouter.web.server:run_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
