[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-free-model-scouter"
version = "0.1.0"
description = "Scout OpenRouter free models and record healthcheck results"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.47",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
]

[project.scripts]
openrouter-free-model-scouter = "openrouter_free_model_scouter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
